--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,24 @@
     <welcome-file-list>
         <welcome-file>comments.jsp</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>CronServlet</servlet-name>
+        <servlet-class>com.me.thepresident.CronServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>CronServlet</servlet-name>
+        <url-pattern>/cronAllowPresidentDisplay</url-pattern>
+    </servlet-mapping>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Crons</web-resource-name>
+            <url-pattern>/cron*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
