--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,10 +12,18 @@
         <servlet-name>CronServlet</servlet-name>
         <servlet-class>com.me.thepresident.CronServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CountServlet</servlet-name>
+        <servlet-class>com.me.thepresident.CountServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>CronServlet</servlet-name>
         <url-pattern>/cronAllowPresidentDisplay</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CountServlet</servlet-name>
+        <url-pattern>/countTheVotes</url-pattern>
     </servlet-mapping>
 
     <security-constraint>
